--- a/mscore/aboutbox.ui
+++ b/mscore/aboutbox.ui
@@ -585,11 +585,38 @@
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="revisionLabel">
-           <property name="text">
-            <string notr="true" comment="do not translate">Revision: 628</string>
-           </property>
-          </widget>
+          <layout class="QHBoxLayout" name="horizontalLayout">
+           <item>
+            <widget class="QLabel" name="revisionLabel">
+             <property name="text">
+              <string notr="true" comment="do not translate">Revision: 628</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="copyRevisionButton">
+             <property name="toolTip">
+              <string>Copy revision number</string>
+             </property>
+             <property name="text">
+              <string></string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_2">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
          </item>
          <item>
           <widget class="QLabel" name="copyrightLabel">
