--- a/mscore/prefsdialog.ui
+++ b/mscore/prefsdialog.ui
@@ -10,6 +10,12 @@
     <height>622</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>MuseScore: Preferences</string>
   </property>
@@ -60,7 +66,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="General">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
