--- a/mscore/inspector_articulation.ui
+++ b/mscore/inspector_articulation.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>237</width>
-    <height>144</height>
+    <height>149</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -54,6 +54,12 @@
      </item>
      <item row="0" column="1">
       <widget class="QDoubleSpinBox" name="x">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="suffix">
         <string extracomment="spatium unit">sp</string>
        </property>
@@ -77,6 +83,12 @@
      </item>
      <item row="1" column="1">
       <widget class="QDoubleSpinBox" name="y">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="suffix">
         <string extracomment="spatium unit">sp</string>
        </property>
