--- a/mscore/inspector_beam.ui
+++ b/mscore/inspector_beam.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>287</width>
-    <height>207</height>
+    <height>211</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -94,6 +94,12 @@
      </item>
      <item row="5" column="1">
       <widget class="QDoubleSpinBox" name="y1">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="suffix">
         <string>sp</string>
        </property>
@@ -142,6 +148,12 @@
      </item>
      <item row="5" column="2">
       <widget class="QDoubleSpinBox" name="y2">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="suffix">
         <string>sp</string>
        </property>
@@ -169,6 +181,12 @@
      </item>
      <item row="2" column="1" colspan="2">
       <widget class="QDoubleSpinBox" name="growLeft">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="value">
         <double>1.000000000000000</double>
        </property>
@@ -176,6 +194,12 @@
      </item>
      <item row="3" column="1" colspan="2">
       <widget class="QDoubleSpinBox" name="growRight">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="value">
         <double>1.000000000000000</double>
        </property>
