--- a/mscore/inspector_element.ui
+++ b/mscore/inspector_element.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>197</width>
-    <height>150</height>
+    <width>160</width>
+    <height>155</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,6 +47,12 @@
     <layout class="QGridLayout" name="gridLayout">
      <item row="2" column="1">
       <widget class="QDoubleSpinBox" name="offsetX">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="suffix">
         <string extracomment="spatium unit">sp</string>
        </property>
@@ -90,6 +96,12 @@
      </item>
      <item row="3" column="1">
       <widget class="QDoubleSpinBox" name="offsetY">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="suffix">
         <string extracomment="spatium unit">sp</string>
        </property>
