--- a/mscore/inspector_hbox.ui
+++ b/mscore/inspector_hbox.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>199</width>
-    <height>123</height>
+    <height>124</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,6 +47,12 @@
     <layout class="QGridLayout" name="gridLayout">
      <item row="1" column="1">
       <widget class="QDoubleSpinBox" name="rightGap">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="suffix">
         <string extracomment="spatium unit">sp</string>
        </property>
@@ -70,6 +76,12 @@
      </item>
      <item row="2" column="1">
       <widget class="QDoubleSpinBox" name="width">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="suffix">
         <string>sp</string>
        </property>
@@ -83,6 +95,12 @@
      </item>
      <item row="0" column="1">
       <widget class="QDoubleSpinBox" name="leftGap">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="suffix">
         <string extracomment="spatium unit">sp</string>
        </property>
