--- a/mscore/inspector_image.ui
+++ b/mscore/inspector_image.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>287</width>
-    <height>177</height>
+    <height>180</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -61,6 +61,12 @@
      </item>
      <item row="1" column="2">
       <widget class="QDoubleSpinBox" name="sizeHeight">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="decimals">
         <number>1</number>
        </property>
@@ -93,6 +99,12 @@
      </item>
      <item row="1" column="1">
       <widget class="QDoubleSpinBox" name="sizeWidth">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="decimals">
         <number>1</number>
        </property>
@@ -138,6 +150,12 @@
      </item>
      <item row="2" column="1">
       <widget class="QDoubleSpinBox" name="scaleWidth">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="suffix">
         <string>%</string>
        </property>
@@ -160,6 +178,12 @@
      </item>
      <item row="2" column="2">
       <widget class="QDoubleSpinBox" name="scaleHeight">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="suffix">
         <string>%</string>
        </property>
