--- a/mscore/inspector_spacer.ui
+++ b/mscore/inspector_spacer.ui
@@ -57,6 +57,12 @@
      </item>
      <item row="0" column="1">
       <widget class="QDoubleSpinBox" name="height">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="suffix">
         <string extracomment="spatium unit">sp</string>
        </property>
