--- a/share/templates/instruments_pt_BR.xml
+++ b/share/templates/instruments_pt_BR.xml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <museScore version="1.0">
 
   <Articulation>
@@ -2569,9 +2569,9 @@
   <instrument-group name="Percussão com alturas indefinidas">
      <instrument>
         <name>Bateria</name>
-        <description>Bateria 3 linhas</description>
+        <description>Bateria 5 linhas</description>
         <short-name>Bat.</short-name>
-        <stafflines>3</stafflines>
+        <stafflines>5</stafflines>
         <clef>19</clef>
         <drumset>1</drumset>
         <channel>
@@ -2580,9 +2580,9 @@
         </instrument>
      <instrument>
         <name>Bateria</name>
-        <description>Bateria 5 linhas</description>
+        <description>Bateria 3 linhas</description>
         <short-name>Bat.</short-name>
-        <stafflines>5</stafflines>
+        <stafflines>3</stafflines>
         <clef>19</clef>
         <drumset>1</drumset>
         <channel>
