small changes in debugger layout
Former-commit-id: 0694a3fbcc5955231f5f14b2bf2c28594b7a2934

--- a/mscore/element.ui
+++ b/mscore/element.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>412</width>
-    <height>231</height>
+    <height>212</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,6 +32,9 @@
       <bool>false</bool>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
+      <property name="topMargin">
+       <number>9</number>
+      </property>
       <item>
        <layout class="QHBoxLayout">
         <property name="spacing">
@@ -114,6 +117,9 @@
       </item>
       <item>
        <layout class="QGridLayout" name="gridLayout_2">
+        <property name="verticalSpacing">
+         <number>0</number>
+        </property>
         <property name="margin">
          <number>0</number>
         </property>
