log console debugging in plugin editor
Former-commit-id: 37d57470f48ff7d975d4777279413c7957e7662e

--- a/mscore/pluginCreator.ui
+++ b/mscore/pluginCreator.ui
@@ -72,7 +72,7 @@
        <enum>Qt::Vertical</enum>
       </property>
       <widget class="QmlEdit" name="textEdit"/>
-      <widget class="QTextBrowser" name="log"/>
+      <widget class="QPlainTextEdit" name="log"/>
      </widget>
     </item>
    </layout>
