--- a/mscore/slurproperties.ui
+++ b/mscore/slurproperties.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Volta Properties</string>
+   <string>Slur Properties</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
