more script bindings; add pluginCreator help browser
Former-commit-id: 52744d6de9a6c0a5087397fce67dc23bf20ae252

--- a/mscore/musescore-apple.qrc
+++ b/mscore/musescore-apple.qrc
@@ -12,6 +12,7 @@
       <file>data/previous.png</file>
       <file>data/next.png</file>
       <file>data/reload.png</file>
+      <file>data/home.png</file>
       <file>data/tab_remove.png</file>
       <file>data/table.svg</file>
 
