--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -12,6 +12,7 @@
       <file>data/previous.png</file>
       <file>data/next.png</file>
       <file>data/reload.png</file>
+      <file>data/home.png</file>
       <file>data/tab_remove.png</file>
       <file>data/table.svg</file>
 
