add manual generator for plugins
Former-commit-id: 8e11e03a532adcd39b8f8f1865ae609a2f8e3df3

--- a/mscore/musescore-apple.qrc
+++ b/mscore/musescore-apple.qrc
@@ -13,6 +13,7 @@
       <file>data/next.png</file>
       <file>data/reload.png</file>
       <file>data/home.png</file>
+      <file>data/help.png</file>
       <file>data/tab_remove.png</file>
       <file>data/table.svg</file>
 
