--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -13,6 +13,7 @@
       <file>data/next.png</file>
       <file>data/reload.png</file>
       <file>data/home.png</file>
+      <file>data/help.png</file>
       <file>data/tab_remove.png</file>
       <file>data/table.svg</file>
 
