extend debugger: show more text flags
Former-commit-id: 01e36f1f954401861ee5395c2f1d5a9123ab46cb

--- a/mscore/text.ui
+++ b/mscore/text.ui
@@ -118,6 +118,13 @@
          </widget>
         </item>
         <item>
+         <widget class="QCheckBox" name="layoutToParentWidth">
+          <property name="text">
+           <string>layoutToParentWidth</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer>
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
